--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,26 +8,26 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.shadow-left-top {
+  box-shadow: -4px -6px 0 rgba(0, 0, 0, 0.15);
+}
+
+.no-page-scroll,
+.no-page-scroll html,
+.no-page-scroll body {
+  overflow: hidden;
+  height: 100%;
 }
